[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://script/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 0.125 )

[node name="Player" type="RigidBody2D"]
position = Vector2( 72, 120 )
mode = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 0, 4 )
scale = Vector2( 0.25, 0.375 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="is_on_ground" type="Area2D" parent="."]
position = Vector2( 0, 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="is_on_ground"]
shape = SubResource( 3 )

[connection signal="body_entered" from="is_on_ground" to="." method="_on_is_on_ground_body_entered"]
[connection signal="body_exited" from="is_on_ground" to="." method="_on_is_on_ground_body_exited"]
